--- a/templates/upload/download.html
+++ b/templates/upload/download.html
@@ -7,7 +7,7 @@
 <body>
 <ul>
 {% for file in files %}
-    <li><a href="{{ file }}">{{ file }}</a></li>
+    <li><a href="{% url 'upload:download' file %}">{{ file }}</a></li>
 {% endfor %}
 </ul>
 </body>
